--- a/PROYECTO/index.html
+++ b/PROYECTO/index.html
@@ -44,5 +44,5 @@
     
     
     </pre>
-    <pre class="awewe">                                                                                                                                                                                                                           Xime y Leo</pre>
+    <pre class="awewe">                                                                                                                                                                                                                           Leo</pre>
 </body>
